remove google adsense

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,15 +22,15 @@
         {% endfor %}
       </div>
     </nav>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Unit1 -->
-    <ins class="adsbygoogle"
-	 style="display:inline-block;width:728px;height:90px"
-	 data-ad-client="ca-pub-3956280229778905"
-	 data-ad-slot="4118150875"></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+    <!-- <\!-- Unit1 -\-> -->
+    <!-- <ins class="adsbygoogle" -->
+    <!--      style="display:inline-block;width:728px;height:90px" -->
+    <!--      data-ad-client="ca-pub-3956280229778905" -->
+    <!--      data-ad-slot="4118150875"></ins> -->
+    <!-- <script> -->
+    <!--   (adsbygoogle = window.adsbygoogle || []).push({}); -->
+    <!-- </script> -->
 
   </div>
 
